[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/texture/door.png" type="Texture" id=1]
[ext_resource path="res://scenes/Objects/Door/Door.gd" type="Script" id=2]
[ext_resource path="res://assets/spritesheets/level/Gerald's Keys/Keys/E-Key.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 33 )

[node name="Door" type="Area2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 6.00001, -43 )
scale = Vector2( 0.4875, 0.54375 )
texture = ExtResource( 1 )

[node name="Overlay" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 4.5, -35.75 )
scale = Vector2( 0.384375, 0.453125 )
z_index = 100
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -33 )
shape = SubResource( 1 )

[node name="KeyHint" type="Sprite" parent="."]
position = Vector2( 0, -85.5 )
scale = Vector2( 0.59375, 0.59375 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
